# tacopie

./: .bazelrc  .clang-format  .doxygen  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  tacopie.pc.in
docs/html/: annotated.html  classes.html  classtacopie_1_1io__service-members.html  classtacopie_1_1io__service.html  classtacopie_1_1logger-members.html  classtacopie_1_1logger.html  classtacopie_1_1logger__iface-members.html  classtacopie_1_1logger__iface.html  classtacopie_1_1self__pipe-members.html  classtacopie_1_1self__pipe.html  classtacopie_1_1tacopie__error-members.html  classtacopie_1_1tacopie__error.html  classtacopie_1_1tcp__client-members.html  classtacopie_1_1tcp__client.html  classtacopie_1_1tcp__server-members.html  classtacopie_1_1tcp__server.html  classtacopie_1_1tcp__socket-members.html  classtacopie_1_1tcp__socket.html  classtacopie_1_1utils_1_1thread__pool-members.html  classtacopie_1_1utils_1_1thread__pool.html  dir_09e761304027c904456130627fd4dcf5.html  dir_1619eefbac1db14eaf18adaf83ce3ccc.html  dir_38b559f7600c1df65fbc4b39f02eb3f8.html  dir_9a013686e2522dd95763481288c1f90f.html  error_8hpp.html  error_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  io__service_8hpp.html  io__service_8hpp_source.html  logger_8hpp.html  logger_8hpp_source.html  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+25 more)
docs/latex/: annotated.tex  classtacopie_1_1io__service.tex  classtacopie_1_1logger.eps  classtacopie_1_1logger.tex  classtacopie_1_1logger__iface.eps  classtacopie_1_1logger__iface.tex  classtacopie_1_1self__pipe.tex  classtacopie_1_1tacopie__error.eps  classtacopie_1_1tacopie__error.tex  classtacopie_1_1tcp__client.tex  classtacopie_1_1tcp__server.tex  classtacopie_1_1tcp__socket.tex  classtacopie_1_1utils_1_1thread__pool.tex  dir_09e761304027c904456130627fd4dcf5.tex  dir_1619eefbac1db14eaf18adaf83ce3ccc.tex  dir_38b559f7600c1df65fbc4b39f02eb3f8.tex  dir_9a013686e2522dd95763481288c1f90f.tex  error_8hpp.tex  files.tex  hierarchy.tex  io__service_8hpp.tex  logger_8hpp.tex  namespaces.tex  namespacetacopie.tex  namespacetacopie_1_1utils.tex  refman.tex  self__pipe_8hpp.tex  structtacopie_1_1io__service_1_1tracked__socket.tex  structtacopie_1_1tcp__client_1_1read__request.tex  structtacopie_1_1tcp__client_1_1read__result.tex  structtacopie_1_1tcp__client_1_1write__request.tex  structtacopie_1_1tcp__client_1_1write__result.tex  tcp__client_8hpp.tex  tcp__server_8hpp.tex  tcp__socket_8hpp.tex  thread__pool_8hpp.tex  typedefs_8hpp.tex
examples/: CMakeLists.txt  http_server.cpp  logger.cpp  tacopie.cpp  tcp_client.cpp  tcp_server.cpp
includes/cpp_http_server/: cpp_http_server  error.hpp  logger.hpp  typedefs.hpp
includes/cpp_http_server/network/: io_service.hpp  tcp_client.hpp  tcp_server.hpp  tcp_socket.hpp
includes/cpp_http_server/utils/: thread_pool.hpp
includes/tacopie/: error.hpp  logger.hpp  tacopie  typedefs.hpp
includes/tacopie/network/: io_service.hpp  self_pipe.hpp  socket_utils.hpp  tcp_client.hpp  tcp_server.hpp  tcp_socket.hpp
includes/tacopie/utils/: thread_pool.hpp  typedefs.hpp
msvc15/: tacopie.sln  tacopie.vcxproj  tacopie.vcxproj.filters
sources/: error.cpp  logger.cpp
sources/network/: io_service.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp
sources/network/common/: io_service.cpp  self_pipe.cpp  socket_utils.cpp  tcp_socket.cpp
sources/network/unix/: io_service.cpp  self_pipe.cpp  tcp_socket.cpp  unix_self_pipe.cpp  unix_tcp_socket.cpp
sources/network/windows/: io_service.cpp  self_pipe.cpp  tcp_socket.cpp  windows_self_pipe.cpp  windows_tcp_socket.cpp
sources/utils/: thread_pool.cpp
tests/: CMakeLists.txt
tests/sources/: main.cpp
